$Id: History,v 1.44 2001-05-30 08:13:34 gcosmo Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------

g3tog4-V03-01-01 30-May-2001 G.Cosmo
- Cleared pedantic warnings detected on Linux-g++ with ISO/ANSI setup.

g3tog4-V03-01-00 15-May-2001 G.Cosmo
- G3toG4BuildTree[.hh.cc]: fix for a case of the placement a volume
                           in cloned mothers
  G3toG4BuildTree() has been split in two methods G3toG4BuildLVTree() and
  G3toG4BuildPVTree(), the first creating logical volumes only, the second
  performing placements afterwards. Doing so, all mothers are ready (their
  logical volumes are created) when a volume is put in more than one mother
  (courtesy of I.Hrivnacova).
- GNUmakefile: G4MAKESHLIB replaced with G4LIB_BUILD_SHARED.

g3tog4-V03-00-02 14-Mar-2001 G.Cosmo
- G3toG4MakeSolid.cc: fixed bug in construction of G4Sphere where theta and
  phi parameters were reversed according to G4Sphere constructor.
  Fixes problem report #230.
- G3Division.cc: correction for "PARA". Slices are placed with G4PVPlacement
  instead of G4PVReplica for this particular case (I.Hrivnacova).

g3tog4-V03-00-01 14-Feb-2001 G.Cosmo
- Added support for replicated "PARA" shapes in G3Division::CreateSolid(...)
  (I.Hrivnacova).

g3tog4-V03-00-00 25-Jan-2001 G.Cosmo
- Fixes for report #188:
  o Fixed bug in G3toG4BuildTree(G3VolTableEntry*, G3VolTableEntry*)
    when positioning volume copies. Index is now decremented.
  o Added -DG3G4DEBUG to CPPFLAGS in GNUmakefile.

g3tog4-V02-00-05 28-Nov-2000 G.Cosmo
- Fixed bug in G3toG4BuildTree::ClearG3PosCopy(G4int). Entry in vector was
  not properly destroyed.

g3tog4-V02-00-04 24-Nov-2000 G.Cosmo
- Added protection against multiple positiong of the same physical volume
  and added methods ClearG3PosCopy(G4int) and ClearDivision()in
  G3VolTableEntry (I.Hrivnacova).
- Removed useless G3toG4Debug global method and file.