@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4gsdetv.cc,v 1.7 2001-07-11 09:59:00 gunter Exp $
+// $Id: G4gsdetv.cc,v 1.8 2001-07-16 15:38:22 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G4ios.hh"
@@ -53,7 +53,7 @@ void G4gsdetv(G4String chset, G4String chdet, G4int idtyp, G4int,
   /*
     // get lvol for detector chdet
     G4LogicalVolume *lvol = G3Vol.GetLV(chdet);
-    if (lvol == NULL) {
+    if (lvol == 0) {
     G4cout << "G4gsdetv: Logical volume " << chdet << " not available. Skip." << G4endl;
     return;
     }
